# OneFileTools

./: .gitignore  MIT-License.txt  README.md
cmd/: 7zipPack.cmd  7zipPackProtected.cmd  ExtractInnoSetup.cmd  ExtractMSI.cmd  FFmpeg_CropDetect.cmd  FFmpeg_EncodeB18.cmd  FFmpeg_EncodeTVorDVD.cmd  FFmpeg_ExtractYouTubeAudio.cmd  FFmpeg_Join.cmd  FFmpeg_mjpeg-mp4.cmd  FsRights_Admin866Protect.cmd  FsRights_Admin866UnProtect.cmd  FsRights_AdminProtect.cmd  FsRights_AdminUnProtect.cmd  FsRights_All.cmd  FsRights_All_866.cmd  FsRights_Decrypt.cmd  FsRights_Encrypt.cmd  FsRights_ResetOwn.cmd  FsRights_ResetOwnRights.cmd  FsRights_ResetRights.cmd  Git_AddToContextMenu.reg  HideUserFromLogon.reg  MSVC_CleanLIB.cmd  NewEmptyFile.cmd  Pandoc_HTML-Markdown.cmd  Pandoc_HTML-MarkdownRaw.cmd  Pandoc_HTMLClean.cmd  Pandoc_Markdown-HTML.cmd  UPX -D.cmd  UPX-9.cmd  VC++ Clean ALL.cmd  ViewListenPorts.cmd  WiFi_WiFiInstall.cmd  Win10_CleanupSoftwareDistribution.cmd  WinBootInit.cmd  Win_HibernateOff.cmd  Win_MountISO.cmd  Win_OEMLogonBG.cmd  Win_TestModeOn.cmd  (+12 more)
cmd-temp/: VBoxManage.bat  andrd_push_update.bat  git_clean.cmd  symlink_files.bat  symlink_folders.bat
cpp/: VS150COMNTOOLS_fix_as_admin.cmd  cmake_gen.cmd  gen_vc.cmd
cpp/Boost/: boost_xp.cmd
cpp/OpenSSL/: make_openssl.cmd
cpp/Qt/: Qt5.10.0_static.cmd
cpp/Qt_TODO/: Qt5.10.0_static.cmd  Qt5.8_xp_static.cmd  qt5_10_0_static.cpp
cpp/cld2/: CMakeLists.txt  cld2.cmd
cpp/ffmpeg/: FindFFMPEG.cmake  _links_.md  ffmpeg.cmd  ffmpeg.sh
cpp/ffmpeg/docs/: ffmpeg_features.txt  ffmpeg_with_h264_hack.txt  my_codecs.txt
cpp/giflib/: CMakeLists.txt  init.cmd
cpp/gtest/: CMakeLists.txt  gtest.cmd
cpp/lsmash-2.9.1/: CMakeLists.txt  README.md
cpp/ph-2.39/: CMakeLists.txt
cpp/win_getopt/: CMakeLists.txt
cpp/x264/: FindX264.cmake  libx264.cmake  x264.cmd  x264.sh
cpp/x264_2/: CMakeLists.txt  README.md
cpp/x265/: x265.cmd
cpp/zlib/: CMakeLists.txt  README.md  TODO.txt  init_orig_src.cmd
cpp/zlib/examples/: zlib.cpp
script/: OpenTorrentURLinComment.cmd  OpenTorrentURLinComment.py  RegistryExport.py  cameyo_dat2reg.py  cameyo_regdiff.py  cameyo_regdiff2.py  cintanotes_xml2files_TODO.py  downloader_tester.py  downloader_tester_example.py  get_free_proxies.py  google_domens_parser.py
src/: bin2cpp.cpp  bin2cppconst.cpp  explorertools.c  mcrt.c  mcrt.h  pickicon.c  pstart.cpp  texplorer.c  uac.c  virtualbox_detect.cpp  virtualbox_detect.cpp.libs  virtualbox_detect_test.bat  vmware_detect.cpp  win_lic.cpp  winpickicon.cpp  zrun.cpp
src/other/: virtualbox_detect.cpp  winlic.cpp
win/: bin2cpp-make.bat  make.bat.template  make2.bat.template  pickicon-make.bat  pstart-make.bat  texplorer-make.bat  winlic-make.bat
